--- a/JavaScript/5. Built-In Objects.md
+++ b/JavaScript/5. Built-In Objects.md
@@ -115,10 +115,34 @@ Rounds the number with `decimalPart ≥ 0.5` to the next integer number, otherwi
 	document.write(a+"<br/>");
 	delete a[0];
 	document.write(a+"<br/>");
-	document.write(a[0]+"<br/>");
+	document.write(a[0]+"<br/>");			// prints "undefined"
 
 	a[1] = 5.5; 
 	document.write(a+"<br/>");
 
 
 Arrays can hold different data types in a zero-base sequence (`0`, `1`, `2`, ... etc.), which has dynamic length (accessed by `length method`).
+
+# Date
+	<html>
+		<head>
+			<title>Date</title>
+			<script>
+				function continuousDisplay(){
+					setInterval(displayDate,1000);				// Recalls displayDate method every 1000 ms (1 sec)
+				}
+				function displayDate(){
+					var d = new Date();
+					//var x = d.toLocaleTimeString();			// Displays Time only
+					//var x = d.toLocaleDateString();			// Displays Date only
+					var x = d.toLocaleString();				// Displays both Date and Time
+					document.getElementById("dateinfo").innerHTML = x;
+				}
+			</script>
+		</head>
+
+		<body onload="continuousDisplay()">
+			Current Date:<br/>
+			<p id="dateinfo"></p>
+		</body>
+	</html>
