--- a/JavaScript/6. Error Handling.md
+++ b/JavaScript/6. Error Handling.md
@@ -1,6 +1,39 @@
-## Runtime Error Handling
+# Error Handling
+
+### Runtime Error Handling
     try{
         code
     } catch(obj) {
         alert(obj.message);
     }
+
+### Throw Custom Error Handling
+    <html>
+    <head>
+    	<title>throw</title>
+    	<script>
+    		function validateAge(){
+    			try{
+    				var age = document.getElementById("age").value;
+    				if(age==""){
+    					throw "Age can not be empty";
+    				}
+    				if(age<18){
+						throw "To young to vote"
+    				}
+    			}catch(obj){
+    				document.getElementById("errorinfo").innerHTML = obj;
+    			}finally{                                                                    // this executes when no exception
+    				document.getElementById("finallyinfo").innerHTML = "Inside Finally";
+    			}
+    		}
+    	</script>
+    </head>
+    
+    <body>
+    	Age: <input type="text" id="age"/>
+    	<input type="button" onclick="validateAge()" value="validate"/>
+    	<p id="errorinfo"></p>
+    	<p id="finallyinfo"></p>
+    </body>
+    </html>
