Update 6. Error Handling.md

--- a/JavaScript/6. Error Handling.md
+++ b/JavaScript/6. Error Handling.md
@@ -7,7 +7,7 @@
         alert(obj.message);
     }
 
-### Throw Custom Error Handling
+### `throw` Custom Error Handling
     <html>
     <head>
     	<title>throw</title>
