Update 6. Error Handling.md

--- a/JavaScript/6. Error Handling.md
+++ b/JavaScript/6. Error Handling.md
@@ -15,10 +15,10 @@
     		function validateAge(){
     			try{
     				var age = document.getElementById("age").value;
-    				if(age==""){
+    				if(age==""){							// Custom Error 1
     					throw "Age can not be empty";
     				}
-    				if(age<18){
+    				if(age<18){							// Custom Error 2
 						throw "To young to vote"
     				}
     			}catch(obj){
