--- a/JavaScript/6. Error Handling.md
+++ b/JavaScript/6. Error Handling.md
@@ -23,7 +23,7 @@
     				}
     			}catch(obj){
     				document.getElementById("errorinfo").innerHTML = obj;
-    			}finally{                                                                    // this executes when no exception
+    			}finally{                                                                // this executes in all cases
     				document.getElementById("finallyinfo").innerHTML = "Inside Finally";
     			}
     		}
