Example + most common commands

--- a/JavaScript/7. HTML DOM & Browser BOM.md
+++ b/JavaScript/7. HTML DOM & Browser BOM.md
@@ -1,2 +1,26 @@
-# HTML Document Object Model (DOM)
+# Document Object Model (DOM): HTML
+    <html>
+    <head>
+    	<title>DOM:HTML</title>
+    	<script>
+    		function handleHTML(){
+    
+    			document.getElementById("para1").align = "center";
+    			document.getElementById("img1").src= "xslt.jpg";            // found here in the same directory
+    		}
+    	</script>
+    </head>
+    
+    <body onload="handleHTML()">
+    	<p id="para1">Bharath</p>
+    	<image id="img1" src="maven.jpg"/>                              // found here in the same directory
+    </body>
+    
+    </html>
+    
 `HTML` is simply composed of objects (`head`, `p`, `body`, ... etc.), these objects, their attributes and styling information (`CSS`) can be accessed by `DOM` API in `JavaScript`.
+
+### Most common commands
+    document.getElementById("uniqueId");             // get elements by id attribute
+    document.getElementByTagName("myText");          // get elements by name attribute
+    document.getElementByClassName("myText");        // get elements by style
