Update 4. Events Handling.md

--- a/JavaScript/4. Events Handling.md
+++ b/JavaScript/4. Events Handling.md
@@ -148,7 +148,7 @@ It is simply `onmousedown` + `onmouseup` events combined.
     	<title>onchange</title>
     	<script>
     	function handleOnChangeEvent(x){
-    		window.location = x;
+    		window.location = x;                    // changes the location (URL) that is loaded on the window 
     	}
     	
     	</script>
