--- a/JavaScript/7. HTML DOM & Browser BOM.md
+++ b/JavaScript/7. HTML DOM & Browser BOM.md
@@ -1,19 +1,65 @@
-# Document Object Model (DOM): HTML
+# 1. Document Object Model (DOM): HTML
     <html>
+    
     <head>
     	<title>DOM:HTML</title>
     	<script>
     		function handleHTML(){
-    
     			document.getElementById("para1").align = "center";
-    			document.getElementById("img1").src= "xslt.jpg";            // found here in the same directory
+    			document.getElementById("img1").src= "xslt.jpg";            // image found here in the same directory
     		}
+
+            function handleCSS(){
+    			document.getElementById("para1").style.color = "red";
+    			document.getElementById("para1").style.backgroundColor = "yellow"
+		    }
+
+            function handleEvent(){
+			    document.getElementById("button1").addEventListener("click",handleButtonClick);
+
+			    function handleButtonClick(){
+				    alert("Click Event");
+			    }
+		    }
+      
+		    window.addEventListener("load",handleEvent);
+
+            function handleRemove(){
+			    var parent = document.getElementById("div1");
+			    var child = document.getElementById("p1");
+			    parent.removeChild(child);
+		    }
+      
+			function handleCreate(){
+			    var parent = document.getElementById("div1");
+			    var child = document.createElement("p");
+			    var text = document.createTextNode("I am new in here.");
+			    child.appendChild(text);                                    // text is a child of the paragraph object
+
+			    var p2 = document.getElementById("p2");
+			    //parent.insertBefore(child,p2);
+			    //parent.appendChild(child);
+    			//parent.replaceChild(child,p2);
+	    		//p2.removeAttribute("align");
+			    var p1 = document.getElementById("p1");
+			    p1.setAttribute("align","center");
+		    }
     	</script>
     </head>
     
-    <body onload="handleHTML()">
-    	<p id="para1">Bharath</p>
-    	<image id="img1" src="maven.jpg"/>                              // found here in the same directory
+    <body onload="handleHTML()" onmouseover="handleCSS()">
+    	<p id="para1">Ahmed</p>
+        <br>
+    	<image id="img1" src="maven.jpg"/>                                  // image found here in the same directory
+        <br>
+        <input type="button" value="click me" id="button1"/>
+
+        <div id="div1">
+		    <p id="p1">All the power is with in you</p>
+		    <p id="p2" align="right">You can do anything and everything</p>
+	    </div>
+	    <input type="button" value="remove" onclick="handleRemove()">
+	    <input type="button" value="create" onclick="handleCreate()">
     </body>
     
     </html>
@@ -24,3 +70,73 @@
     document.getElementById("uniqueId");             // get elements by id attribute
     document.getElementByTagName("myText");          // get elements by name attribute
     document.getElementByClassName("myText");        // get elements by style
+
+### `addEventListener("event",function)` method
+It allows handing events in each scope in `JavaScript` code.
+
+### `createElement("object")` method
+It allows creating a `HTML` element.
+
+### `removeChild("childObject")` method
+It is a method for an accessed parent `HTML` element to remove a child.
+
+### `createTextNode("myText")` method
+It allows a variable to carry a text that can be uploaded to a `HTML` object.
+
+### `appendChild(child)` method
+It allows appending a child to a `HTML` object.
+
+# 2. Browser Object Model (BOM)
+    <html>
+        <head>
+        	<title>Screen</title>
+        	<script>
+        		document.write(window.screen.width+","+window.screen.height);            // accessing the screen dimension on which the window is loaded
+                document.write("App Name "+navigator.appName+"<br/>");                   // gets browser name
+            	document.write("App Code Name "+navigator.appCodeName+"<br/>");          // gets browser code name
+            	document.write("App Code Name "+navigator.cookieEnabled+"<br/>");        // whether cookies are enabled on this browser or not
+
+                // printing all the properties avialable for the navigator object
+            	for(x in navigator){
+            		document.write(x+"<br/>")
+            	}
+        	</script>
+        </head>
+        
+        <body>
+        </body>
+    </html>
+The browser itself is presented as the `window` object in `JavaScript`, which has different obejcts (childs) as `alert`, `confirm`, `prompt`, `setTimeout`, `setInterval`, `location`, `screen`, `history`, `navigator` (for accessing all browser information), ... etc. The `BOM` is not default, some browsers support it, others don't and others support it with different names for the objects, but most of the browsers support it with the same naming.
+
+### History Objects
+#### I. `back()`
+    <html>
+    <head>
+    	<title>Home</title>
+    	<script>
+    		function handleBack(){
+    			window.history.back();
+    		}
+    	</script>
+    </head>
+    
+    <body>
+    	<input type="button" value="back" onclick="handleBack()"/>
+    </body>
+    </html>
+#### II. `forward()`
+    <html>
+    <head>
+    	<title>Login</title>
+    	<script>
+    		function handleForward(){
+    			window.history.forward();
+    		}
+    	</script>
+    </head>
+    
+    <body>
+    	<a href="home.html">Home</a>
+    	<input type="button" value="forward" onclick="handleForward()"/>
+    </body>
+    </html>
