Update 9. OOP in JS.md

--- a/JavaScript/9. OOP in JS.md
+++ b/JavaScript/9. OOP in JS.md
@@ -1,1 +1,112 @@
+# Object-Oriented Programming
+Unlike other programming languages, like `C++`, `Java` and `Python`, `JavaScript` defines an object not from a `class` method, but from a constructor function, the built-in type `Object()`, a literal constructor, or as a singletone object that is initiated only once in the whole program.
 
+### 1. Using built-in type `Object()`
+    <html>
+    	<head>
+    		<title>Custom Object Creation</title>
+    		<script>
+    			var blogPost = new Object();                // new is the operator and Object is a built-in type
+    			blogPost.title = "JavaScript";              // creating attributes with values assigned
+    			blogPost.text = "It is awesome!!";          // creating attributes with values assigned
+    			blogPost.category = "UI Technology";        // creating attributes with values assigned
+    
+    			document.write(blogPost.title + "<br/>");
+    			document.write(blogPost.text + "<br/>");
+    			document.write(blogPost.category);
+    		</script>
+    	</head>
+    
+    	<body>
+    	</body>
+    </html>
+
+### 2. Using Constructor Function
+    <html>
+    
+    	<head>
+    		<title>Custom Object Creation Using Function</title>
+    		<script>
+          // Constructor function
+    			function blogpost(title, text) {                  // This is like the object template
+    				this.title = title;                             // creating attributes with values assigned
+    				this.text = text;                               // creating attributes with values assigned
+    				this.addCategory = addCategory;                 // creating attributes with values assigned from a function
+    				this.displayBlogPost = displayBlogPost;         // creating attributes with coding steps assigned using function
+    
+    			}
+       
+    			function addCategory(category) {
+    				this.category = category;
+    			}
+    
+    			function displayBlogPost() {
+    				document.write(this.title + "<br/>");
+    				document.write(this.text + "<br/>");
+    				document.write(this.category + "<br/>");
+    
+    			}
+    
+    			var obj1 = new blogpost("JQuery", "Makes JS easier to use");
+    			obj1.addCategory("UI Technology");
+    			obj1.displayBlogPost();
+    
+    
+    			var obj2 = new blogpost("AngularJS", "To Build Single Page Apps!!");
+    			obj2.addCategory("Advanced UI Technology");
+    			obj2.displayBlogPost();
+    		</script>
+    	</head>
+    
+    	<body>
+    	</body>
+    
+    </html>
+
+### 3. Literal Constructor
+    <html>
+    
+    	<head>
+    		<title>Custom Object Creation Using Function</title>
+    		<script>
+          var blogpost = {
+            title: "Java",
+            text: "It is an object-oriented language",
+            displayDetails: function(){
+              document.write(this.title + "<br>");
+              document.write(this.text);
+            }
+          };
+
+          blogpost.displayDetails();
+    		</script>
+    	</head>
+    
+    	<body>
+    	</body>
+    
+    </html>
+
+### 4. Singletone Object
+    <html>
+    
+    	<head>
+    		<title>Custom Object Creation Using Function</title>
+    		<script>
+          var blogpost = new function(){
+            this.title="Java",
+            this.text="It is an object-oriented language",
+            displayDetails=function(){
+              document.write(this.title + "<br>");
+              document.write(this.text);
+            }
+          };
+
+          blogpost.displayDetails();
+    		</script>
+    	</head>
+    
+    	<body>
+    	</body>
+    
+    </html>
