Update 3. SQL Aggregations.md

--- a/SQL Summaries/3. SQL Aggregations.md
+++ b/SQL Summaries/3. SQL Aggregations.md
@@ -15,7 +15,7 @@ Aggregators only aggregate vertically - the values of a column. If you want to p
 7. `HAVING`: filters aggregate columns, because `WHERE` clause does not.
 8. Dates in Databases:
 
-   Databases store dates in form of `YYYY-MM-DD HH:MM:SS`; from largest unit to smallest one.
+   Databases store dates in form of `YYYY-MM-DD hh:mm:ss`; from largest unit to smallest one.
     1. `DATE_TRUNC('day' or 'month' or 'year', column_name)`: Truncates the date column into days, months, or years.
     2. `DATE_PART('dow' or 'day' or 'month' or 'year', column_name)`: pulls a specific portion of a date, but notice pulling `month` or day of the week `dow` means that you are no longer keeping the years in order. Rather you are grouping for certain components regardless of which year they belonged in.
 9. `CASE WHEN ... THEN ... ELSE ... END`: Derives new column using conditional logic (`if ... else if ... else ...` logic). We can use as many `WHEN ... THEN ...` as it is necessary for the query's proper execution. Getting the same information using a `WHERE` clause means only being able to get one set of data from the `CASE` at a time, so we can replace many `WHERE` queries with only one `CASE` query.
